--- a/templates/every.html
+++ b/templates/every.html
@@ -31,7 +31,7 @@
 </center>
 <br><br><br><br>
 <center>
-<form method="POST" action="/all_photos">
+<form method="POST" action="/add_new">
 	<div>
             <label id="linkit"><b>put your link</b></label>
             <br><br>
