--- a/templates/all_photos.html
+++ b/templates/all_photos.html
@@ -8,7 +8,7 @@
 <body bgcolor="black">
 	<br><br><br>
 	<center>
-	<img src={{link}}/></center>
+	<img src="{{link['link']}}"/></center>
 
 </body>
 </html>
